# RealTimeFactChecker

./: .gitignore  README.md  check_db.py  docker-compose.yml  package-lock.json  package.json  test_groq.py  test_verify_groq.py  turbo.json
apps/api/: Dockerfile  README.md  pyproject.toml  run_worker.py  start.sh  test_verify_groq.py
apps/api/app/: main.py
apps/api/app/api/: endpoints.py
apps/api/app/core/: config.py  db.py  security.py
apps/api/app/services/: extraction.py  transcription.py  verification.py
apps/api/app/workers/: broker.py  tasks.py
apps/web/: README.md  eslint.config.mjs  next.config.ts  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/admin/: admin-client.tsx  layout.tsx  page.tsx
apps/web/src/app/admin/usage/: page.tsx
apps/web/src/app/admin/users/: page.tsx
apps/web/src/app/auth/callback/: route.ts
apps/web/src/app/auth/signout/: route.ts
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/dashboard/reports/: page.tsx
apps/web/src/app/dashboard/reports/[id]/: page.tsx
apps/web/src/app/dashboard/reports/[id]/print/: page.tsx
apps/web/src/app/dashboard/settings/: page.tsx
apps/web/src/app/login/: actions.ts  page.tsx
apps/web/src/app/reset-password/: page.tsx
apps/web/src/components/: landing-content.tsx  realtime-mic.tsx  report-table.tsx  report-viewer.tsx  text-input.tsx  upload-zone.tsx  verification-results.tsx
apps/web/src/utils/supabase/: middleware.ts  server.ts
supabase/migrations/: 00001_initial_schema.sql  00002_add_settings.sql
