[project]
name = "api"
version = "0.1.0"
description = "Fact Checker API"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "dramatiq[redis, watch]",
    "groq",
    "python-multipart",
    "pyjwt",
    "supabase",
    "requests",
    "PyMuPDF",
    "python-docx",
    "tiktoken"
]
